@@ -52,16 +52,6 @@ gm_read_method: 0
 // by gm_can_drop_lv (battle_athena.conf). 
 lowest_gm_level: 1
 
-// How often the GM accounts will be reloaded by the map-server in minutes
-read_gm_interval: 10
-
-// Ideally under linux, you want to use localhost instead of 127.0.0.1. 
-// 
-// Under windows, you want to use 127.0.0.1.  If you see a message like
-// "Can't connect to local MySQL server through socket '/tmp/mysql.sock' (2)"
-// and you have localhost, switch it to 127.0.0.1
-
-
 // You can specify the codepage to use in your mySQL tables here.
 // (Note that this feature requires MySQL 4.1+)
 //default_codepage: 
@@ -72,6 +62,11 @@ read_gm_interval: 10
 // 0 disables (default). Enable it only if you are getting
 // "MySQL server has gone Away" errors due to lack of activity on your server
 connection_ping_interval: 7
+
+// For IPs, ideally under linux, you want to use localhost instead of 127.0.0.1 
+// Under windows, you want to use 127.0.0.1.  If you see a message like
+// "Can't connect to local MySQL server through socket '/tmp/mysql.sock' (2)"
+// and you have localhost, switch it to 127.0.0.1
 
 // MySQL Login SQL Server
 login_server_ip: 127.0.0.1
@@ -119,18 +114,13 @@ db_server_logindb: ragnarok
 // this is meant for people who KNOW their stuff, and for some reason want to change their
 // database layout. [CLOWNISIUS]
 
+//Column names for the login table.
 login_db_account_id: account_id
 login_db_userid: userid
 login_db_user_pass: user_pass
 login_db_level: level
 
-
 // ALL MySQL Database Table names
-
-// GM Account Database Table
-gm_db: login
-gm_db_level: level
-gm_db_account_id: account_id
 
 // Login Database Tables
 login_db: login
@@ -170,10 +160,6 @@ mail_db: mail
 
 //Use SQL item_db and mob_db for the map server
 use_sql_db: no
-
-//SQL for the rest of the databases.
-//This is experimental and not meant to be used by anyone other than developers yet.
-use_new_sql_db: no
 
 // Use SQL Mail Server
 mail_server_enable: no
