@@ -1,5 +1,9 @@
 Date	Added
 
+2006/10/11
+	* Removed useless inter_athena settings (they were doing absolutely
+	  nothing): read_gm_interval, gm_db, gm_db_level, gm_db_account_id,
+	  use_new_sql_db [Skotlex]
 2006/10/06
 	* status_cast_cancel is now a type 4 (object bitmasks) setting
 	  (status.conf). [Skotlex]
